tests/snapshots/examples_fixtures/type_system__failing__18_handle_incomplete_operation_set.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/18_handle_incomplete_operation_set.flx
== compile ==
failed (compile)
== diagnostics ==
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: read.

  examples/type_system/failing/18_handle_incomplete_operation_set.flx:8:1
  |
8 | fn main() with Console {
  | ^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------- handled expression

Hint:
  Add 1 arm(s) to the handle block:

    read(resume) -> resume(/* : String */ todo!())

Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
== stdout ==
<not executed>
